--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==2.1.2"
 djangorestframework = "==3.8.2"
 pymysql = "==0.9.2"
+mysql-connector-python = "*"
 
 [dev-packages]
 
