--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 gibo 2.1.0 by Simon Whitaker <sw@netcetera.org>
 https://github.com/simonwhitaker/gibo
 .DS_Store
+manager_project/.DS_Store
+manager_project/manager_project/__pycache__
 
+gibo 2.1.0 by Simon Whitaker <sw@netcetera.org>
+https://github.com/simonwhitaker/gibo
